--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
 DSN_SENTRY=your_sentry_dsn
-MONGODB_USER=your_mongodb_user
-MONGODB_PASS=your_mongodb_password
-MONGODB_CLUSTER=your_mongodb_cluster
-MONGODB_DB=your_mongodb_db
+MONGODB_URI=your_mongodb_uri
+DB_NAME=your_db_name
