--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 DSN_SENTRY=your_sentry_dsn
 MONGODB_URI=your_mongodb_uri
 DB_NAME=your_db_name
+MONTO_URL=https://backoffice.dev.montopay.com
+MONTO_USERNAME=your_username
+MONTO_PASSWORD=your_password
+API_URL=your_api_url
